Fixes #2 - Chart rendered too small in chrome

--- a/resources/css/pedigree-chart.css
+++ b/resources/css/pedigree-chart.css
@@ -2,8 +2,8 @@
     position: relative;
     /*font-family: Helvetica,Arial,sans-serif;*/
     font-size: 12px;
-    /*display: flex;*/
-    /*flex: auto;*/
+    display: flex;
+    flex: auto;
 }
 
 #page-pedigree svg {
